fix: Integrated new backend with projectModal